More commands, various refactoring.

--- a/RexBot/RexBot.csproj
+++ b/RexBot/RexBot.csproj
@@ -163,11 +163,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ComandReload.cs" />
     <Compile Include="Commands\CommandAddCommand.cs" />
+    <Compile Include="Commands\CommandAllInfo.cs" />
+    <Compile Include="Commands\CommandHelp.cs" />
     <Compile Include="Commands\CommandRemoveCommand.cs" />
+    <Compile Include="Commands\CommandStatus.cs" />
     <Compile Include="Commands\IChatCommand.cs" />
     <Compile Include="RexBotCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
