Fix regex, change commands to be await-able to match Discord.Net design patterns

--- a/RexBot/RexBot.csproj
+++ b/RexBot/RexBot.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Commands\CommandAllInfo.cs" />
     <Compile Include="Commands\CommandHelp.cs" />
     <Compile Include="Commands\CommandRemoveCommand.cs" />
+    <Compile Include="Commands\CommandRexStatus.cs" />
     <Compile Include="Commands\CommandStatus.cs" />
     <Compile Include="Commands\IChatCommand.cs" />
     <Compile Include="RexBotCore.cs" />
