--- a/RexBot/packages.config
+++ b/RexBot/packages.config
@@ -16,10 +16,10 @@
   <package id="Google.Apis.Sheets.v4" version="1.20.0.756" targetFramework="net461" />
   <package id="log4net" version="2.0.3" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.3.0-beta2" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.3.0-beta2" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.3.0-beta2" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.3.0-beta2" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
@@ -34,10 +34,10 @@
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
-  <package id="System.Data.SQLite" version="1.0.105.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.EF6" version="1.0.105.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Linq" version="1.0.105.0" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
