--- a/RexBot/packages.config
+++ b/RexBot/packages.config
@@ -2,13 +2,13 @@
 <packages>
   <package id="Atlassian.SDK" version="9.2.4" targetFramework="net461" />
   <package id="Discord.Addons.EmojiTools" version="1.1.0-ci-00017" targetFramework="net461" />
-  <package id="Discord.Net" version="1.0.0-rc3-00744" targetFramework="net461" />
-  <package id="Discord.Net.Commands" version="1.0.0-rc3-00744" targetFramework="net461" />
-  <package id="Discord.Net.Core" version="1.0.0-rc3-00744" targetFramework="net461" />
-  <package id="Discord.Net.Rest" version="1.0.0-rc3-00744" targetFramework="net461" />
-  <package id="Discord.Net.Rpc" version="1.0.0-rc3-00744" targetFramework="net461" />
-  <package id="Discord.Net.Webhook" version="1.0.0-rc3-00744" targetFramework="net461" />
-  <package id="Discord.Net.WebSocket" version="1.0.0-rc3-00744" targetFramework="net461" />
+  <package id="Discord.Net" version="2.0.0-alpha-build-00829" targetFramework="net461" />
+  <package id="Discord.Net.Commands" version="2.0.0-alpha-build-00829" targetFramework="net461" />
+  <package id="Discord.Net.Core" version="2.0.0-alpha-build-00829" targetFramework="net461" />
+  <package id="Discord.Net.Rest" version="2.0.0-alpha-build-00829" targetFramework="net461" />
+  <package id="Discord.Net.Rpc" version="2.0.0-alpha-build-00829" targetFramework="net461" />
+  <package id="Discord.Net.Webhook" version="2.0.0-alpha-build-00829" targetFramework="net461" />
+  <package id="Discord.Net.WebSocket" version="2.0.0-alpha-build-00829" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Google.Apis" version="1.20.0" targetFramework="net461" />
   <package id="Google.Apis.Auth" version="1.20.0" targetFramework="net461" />
