--- a/RexBot/packages.config
+++ b/RexBot/packages.config
@@ -15,6 +15,12 @@
   <package id="Google.Apis.Core" version="1.20.0" targetFramework="net461" />
   <package id="Google.Apis.Sheets.v4" version="1.20.0.756" targetFramework="net461" />
   <package id="log4net" version="2.0.3" targetFramework="net461" />
+  <package id="Manatee.Json" version="6.0.3" targetFramework="net461" />
+  <package id="Manatee.Trello" version="1.18.3" targetFramework="net461" />
+  <package id="Manatee.Trello.ManateeJson" version="1.8.1" targetFramework="net461" />
+  <package id="Manatee.Trello.WebApi" version="1.1.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.3.0-beta2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.3.0-beta2" targetFramework="net461" />
