--- a/RexBot/packages.config
+++ b/RexBot/packages.config
@@ -20,21 +20,29 @@
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.3.0-beta2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.3.0-beta2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.3.0-beta2" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="Steam.Models" version="3.0.4" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.1.1" targetFramework="net461" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.WebSockets.Client" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
@@ -42,5 +50,4 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
-  <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net461" />
 </packages>
