--- a/RexBot/packages.config
+++ b/RexBot/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Atlassian.SDK" version="9.2.4" targetFramework="net461" />
   <package id="Discord.Addons.EmojiTools" version="2.0.1" targetFramework="net461" />
-  <package id="DSharpPlus" version="3.2.3" targetFramework="net461" />
+  <package id="DSharpPlus" version="4.0.0-beta-00384" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Google.Apis" version="1.20.0" targetFramework="net461" />
   <package id="Google.Apis.Auth" version="1.20.0" targetFramework="net461" />
